force-app/main/default/objects/Account/fields/BikeType__c.field-meta.xml
<CustomField>
    <fullName>BikeType__c</fullName>
    <label>BikeType</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gravel</fullName>
            </value>
            <value>
                <fullName>Mountain Bike</fullName>
            </value>
            <value>
                <fullName>Speed (Road)</fullName>
            </value>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Race</fullName>
            </value>
            <value>
                <fullName>Pro Tour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>