force-app/main/default/objects/Account/fields/Celular__c.field-meta.xml
<CustomField>
    <fullName>Celular__c</fullName>
    <label>Celular</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Iphone</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>