force-app/main/default/objects/Account/fields/Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Pokemon__c</fullName>
    <description>Escolhar seu Poke</description>
    <label>Pokemon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pikaxu</fullName>
            </value>
            <value>
                <fullName>charizard</fullName>
            </value>
            <value>
                <fullName>bubassauro</fullName>
            </value>
            <value>
                <fullName>xarmilion</fullName>
            </value>
            <value>
                <fullName>torresming</fullName>
            </value>
            <value>
                <fullName>bubassalto1</fullName>
            </value>
            <value>
                <fullName>bubassalto2</fullName>
            </value>
            <value>
                <fullName>bubassalto3</fullName>
            </value>
            <value>
                <fullName>bubassalto4</fullName>
                <default>true</default>
                <label>bubassalto4</label>
            </value>
            <value>
                <fullName>Feature3</fullName>
                <default>true</default>
                <label>Feature3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>